--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "chart.js": "^3.6.0",
+    "install": "^0.13.0",
+    "ng2-charts": "^3.0.10",
     "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
